# chrome

./: .gitignore  README.md  background.js  content.js  manifest.json
backend/: .gitignore  config.py  db.py  main.py  middleware.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/routes/: capture.py  captures.py  health.py
backend/services/: analysis_prompt.py  dedup.py  file_writer.py
backend/tests/: conftest.py  test_auth.py  test_capture_link.py  test_capture_page.py  test_capture_selection.py  test_dedup.py  test_health.py  test_recent.py
deploy/: browser-capture-rules.json  cloud-vault-capture.service  deploy.sh  ingest_browser_captures.py  nginx-vault.conf
lib/: readability.js
options/: options.html  options.js
popup/: popup.css  popup.html  popup.js
