[project]
name = "cloud-vault-browser-capture"
version = "0.1.0"
description = "Browser capture API for Cloud Vault investment research pipeline"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
